VC8 doesn't like the copyright sign in jscompat.h. Issue found by jshin, bug 328589, r=gerv/mrbkap